--- a/RHEL7-Lab-Setup.yml
+++ b/RHEL7-Lab-Setup.yml
@@ -1,1 +1,48 @@
+---
+- hosts: localhost
 
+  tasks:
+    - name: Root Password (ALL)
+      user: name=root    password="$5$PK7KM9pT$AehNIMYtW22TEE.D0U3ORWCDFMFvARwJLf8YPvVgAf."
+
+    - name: Student Password (ALL)
+      user: name=student password="$5$OJx9uJm8$4VYM2llNxqX/7I4M3vXZM8ZJ9FE2msmHpcOqXlDesC8"
+
+    - name: Required packages for lab section (ALL)
+      yum: name=bash-completion state=installed
+
+    - name: Required packages for lab section (SYSTEMD)
+      yum: name=httpd,mariadb,mariadb-server,php,php-mysql state=installed
+
+    - name: Required state for lab section (SYSTEMD mariadb)
+      service: name=mariadb state=stopped enabled=no
+
+    - name: Required state for lab section (SYSTEMD httpd)
+      service: name=httpd state=stopped enabled=no
+
+    - name: Required packages for lab section (PCP)
+      yum: name=pcp,pcp-gui state=installed
+
+    - name: Required state for lab section (PCP pmcd)
+      service: name=pmcd state=stopped enabled=no
+
+    - name: Required state for lab section (PCP pmlogger)
+      service: name=pmlogger state=stopped enabled=no
+
+    - name: Required packages for lab section (NUMA)
+      yum: name=numad,numactl state=installed
+
+    - name: Required state for lab section (NUMA)
+      service: name=numad state=stopped enabled=no
+
+    - name: Required packages for lab section (LVM)
+      yum: name=system-storage-manager state=installed
+
+    - name: LAB Setup (LVM - create block devices)
+      shell: for i in {0..5} ; do [[ -e /var/tmp/disk${i}.img ]] || fallocate -l 100M /var/tmp/disk${i}.img ; done
+
+    - name: LAB Setup (LVM - create new partitions)
+      shell: for i in {0..5} ; do printf "o\nn\np\n\n\n\nt\n8e\nw\n" | fdisk /var/tmp/disk${i}.img  ; done
+
+    - name: LAB Setup (LVM - setup kpartx loopbacks)
+      shell: for i in {0..5} ; do kpartx -av /var/tmp/disk${i}.img  ; done
